--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,26 +4,37 @@
 
 
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
 <head>
-    <title>Time to Get in Shape, YOU FATTY</title>
-    
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    snippets.bs3navbarfixedtop
 </head>
 
 
 
 <body>
+    
+    snippets.<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<a class="navbar-brand" href="#">Title</a>
+	<ul class="nav navbar-nav">
+		<li class="active">
+			<a href="#">Home</a>
+		</li>
+		<li>
+			<a href="#">Link</a>
+		</li>
+	</ul>
+</nav>
 
 
 
     {{{body}}}
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
-   
+
 
 </html>
