--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,29 +5,43 @@
 
 
 <head>
+    <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    snippets.bs3navbarfixedtop
+   
+    
+    
+    
+   
 </head>
 
 
 
 <body>
+
     
-    snippets.<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<a class="navbar-brand" href="#">Title</a>
-	<ul class="nav navbar-nav">
-		<li class="active">
-			<a href="#">Home</a>
-		</li>
-		<li>
-			<a href="#">Link</a>
-		</li>
-	</ul>
-</nav>
-
-
-
-    {{{body}}}
+<div id="wrapper">
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li class="sidebar-brand"><a href="/">Home</a></li>
+            <li><a href="/unirest">Unirest</a></li>
+            <li><a href="/data">Getting the Data</a></li>
+            <li><a href="/example">Example</a></li>
+        </ul>
+    </div>
+    <div id="page-content-wrapper">
+        <div class="page-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        
+                         {{{body}}}
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
