--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,9 +23,9 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li class="sidebar-brand"><a href="/">Home</a></li>
-            <li><a href="/unirest">Unirest</a></li>
-            <li><a href="/data">Getting the Data</a></li>
-            <li><a href="/example">Example</a></li>
+            <li><a href="/unirest">About</a></li>
+            <li><a href="/Projects">Projects</a></li>
+            <li><a href="/example">Contact</a></li>
         </ul>
     </div>
     <div id="page-content-wrapper">
