--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,1 @@
-Something will go here. Maybe a photo or two. Of cats?
+Something will go here. Maybe a photo or two. Of cats? Welcome to my site. I figured it was about time to do one of these things. Maybe I'll post updates about my time at OSU. 3 quarters down, 5 to go and more debt to go as well. /cries
