--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -4,3 +4,5 @@ These are some of the OSU projects I have done so far. Clicks on the images to g
  <img src="DOM_tree.png" alt="dom" style="width:304px;height:228px;">
 
 This was our 5 that had testing our knowledge of manipulating the DOM. 
+
+<script>script.js</script>
