--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -5,4 +5,5 @@ These are some of the OSU projects I have done so far. Clicks on the images to g
 
 This was our 5 that had testing our knowledge of manipulating the DOM. 
 
-<script>script.js</script>
+
+<script src="/js/script.js"></script>
