fixing broken links

--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,7 +1,8 @@
-These are some of the OSU projects I have done so far. Clicks on the images to go to the github repo. The plan will eventually 
+These are some of the OSU projects I have done so far. Clicks on the images to go to the github repo. The plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my mad CSS skills. 
 
 
- <img src="DOM_tree.png" alt="dom" style="width:304px;height:228px;">
+ <a href ="https://github.com/eferrer28/CS-290/blob/master/Week5/script.js"><img src="DOM_tree.png" alt="dom" style="width:304px;height:228px;"></a>
+
 
 
  <img src="cloud.svg" alt="cloud" style="width:304px;height:228px;">
