--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,15 @@
-Something will go here. Maybe a photo or two. Of cats? Welcome to my site. I figured it was about time to do one of these things. Maybe I'll post updates about my time at OSU. 3 quarters down, 5 to go and more debt to go as well. /cries
+<header class="headduh">Welcome to My Site!</header>
+
+    
+<p>My name is Eric and this is my place on the web -- my portfolio, my resume, and the place where I will ramble about nonsense that hopefully others care about. It is made using a very fun stack, powered by Django, Gunicorn, and HTML5 Boilerplate. You can find out more by checking out the git repo.
+</p>
+
+<h3>Currently Working On...</h3>
+<ul>
+    <li>Completing my bachelors Degree! Currently Taking Assembly and Databases</li>
+    <li>Adding content to this site!</li>
+    <li>Touching Up Past Projects with CSS</li>
+    
+    
+
+</ul>
