--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -1,13 +1,52 @@
-These are some of the OSU projects I have done so far. Clicks on the images to go to the github repo. The plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my mad CSS skills. 
+<header class="headduh">Projects!</header>
+
+<div class="projects">
+
+    These are some of the OSU projects I have done so far along with a few coding samples from PDX Code Guild. CThe plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my CSS skills. {{!--SPLIT UP PROJECTS PER DIV --}}
+
+    <div id="project1" class="box">
+        <a href="#">
+
+            <div class="overlay">
+                <span class="projcontent">This was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.
+            </span>
+
+            </div>
+            </a>
+    </div>
+    
+    
+    <div id="project2" class="box">
+        <a href="#">
+        <div class="overlay">
+            <span class="projcontent">his was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.</span>
+        </div>
+            </a>
+    </div>
 
 
- <a href ="https://github.com/eferrer28/CS-290/blob/master/Week5/script.js"><img src="DOM_tree.png" alt="dom" style="width:304px;height:228px;"></a>
+
+
+    {{!--------------------END OF SPLIT ------------------------}}
+
+    <span class="project">
+        <a class="dom" href="/dom">
+            
+            <img src="DOM_tree.png" alt="dom" style="width:420px;height:228px;">
+            <div class="thedom">
+                
+        </div>
+        </a>
+        
+    </span>
 
 
 
- <img src="cloud.svg" alt="cloud" style="width:304px;height:228px;">
+    <span class="project">
+        <a class="weather" href="https://github.com/eferrer28/CS-290/blob/master/Week5/script.js"><img src="cloud.svg" alt="cloud" style="width:420px;height:228px;"></a>
+    </span>
 
-This was our 5 that had testing our knowledge of manipulating the DOM. 
 
 
-<script src="/js/script.js"></script>
+
+</div>
