--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -8,25 +8,62 @@
         <a href="#">
 
             <div class="overlay">
-                <span class="projcontent">This was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.
-            </span>
-
+                <h3>hehehe</h3>
+                <p class="projcontent">
+                    This was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.
+            </p>
+                <div>
+                    
+							<span class="skill language">JavaScript</span>
+							<span class="skill language">Python</span>
+							<span class="skill">AngularJS</span>
+							<span class="skill">Django</span>
+							<span class="skill">Web mobile</span>
+							<span class="skill">Sass</span>
+                </div>
             </div>
-            </a>
+        </a>
     </div>
-    
-    
+
+
     <div id="project2" class="box">
         <a href="#">
-        <div class="overlay">
-            <span class="projcontent">his was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.</span>
-        </div>
-            </a>
+            <div class="overlay">
+                <span class="projcontent">his was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.</span>
+            </div>
+        </a>
     </div>
 
 
+    <div id="project3" class="box">
+        <a href="#">
+            <div class="overlay">
+                <span class="projcontent">This will be about the HOW TO Guide</span>
+            </div>
+        </a>
+    </div>
 
+    <div id="project4" class="box">
+        <a href="#">
+            <div class="overlay">
+                <span class="projcontent">This will be about the HOW TO Guide Hdfgfdg df dfgd f</span>
+            </div>
+        </a>
+    </div>
 
+    {{!-----------------CODE GUILD SAMPLES ----------------------}}
+    
+    <h3>PDX Code Guild Coding Samples</h3>
+    
+    
+        <div id="project5" class="box">
+        <a href="#">
+            <div class="overlay">
+                <span class="projcontent">Calculator - DOOT DOOT DOOT </span>
+            </div>
+        </a>
+    </div>
+    
     {{!--------------------END OF SPLIT ------------------------}}
 
     <span class="project">
