--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,14 @@
     background-color: #74AFAD;
     padding-top: 25px;
 }
+
+.icons {
+    
+    margin-left: 25px;
+    padding-left: 50px;
+    
+}
+
 #page-content-wrapper {
     margin-left: 100px;
     margin-right: 100px;
@@ -85,7 +93,7 @@ li a {
     width: 420px;
     height: 200px;
     background: url("DOM_tree.png");
-    background-size: cover;
+    background-size: contain;
     overflow: hidden;
     display: inline-block;
     background-position: center;
@@ -108,15 +116,62 @@ li a {
         
 }
 
+
+#project3 {
+    width: 420px;
+    height: 200px;
+    background: url("howto.jpg");
+    background-size: contain;
+    overflow: hidden;
+    display: inline-block;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+
+        
+}
+
+#project4 {
+    width: 420px;
+    height: 200px;
+    background: url("exercise.png");
+    background-size: contain;
+    overflow: hidden;
+    display: inline-block;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+
+        
+}
+
+#project5 {
+    width: 420px;
+    height: 200px;
+    background: url("calculator.jpg");
+    background-size: contain;
+    overflow: hidden;
+    display: inline-block;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+
+        
+}
+
 .overlay {
     background: rgba(0, 0, 0, .75);
-    text-align: center;
-    padding: 45px 0 66px 0;
+    
+
     opacity: 0;
     -webkit-transition: opacity .25s ease;
     -moz-transition: opacity .25s ease;
     width: 100%;
     height: 100%;
+    font-family: Helvetica;
+    font-weight: 900;
+    color: rgba(255, 255, 255, .85);
+    font-size: 20px;
 }
 .box:hover .overlay {
     opacity: 1;
