--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 <header class="headduh">Welcome to My Site!</header>
 
     
-<p>My name is Eric and this is my place on the web -- my portfolio, my resume, and the place where I will ramble about nonsense that hopefully others care about. It is made using a very fun stack, powered by Django, Gunicorn, and HTML5 Boilerplate. You can find out more by checking out the git repo.
+<p>My name is Eric and this is my place on the web -- my portfolio, my resume, and the place where I will ramble about nonsense that hopefully others care about. It is made using a very fun stack, powered by Node.js. You can find out more by checking out the git repo.
 </p>
 
 <h3>Currently Working On...</h3>
