--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,9 +29,9 @@
                     <li><a href="/example">Contact</a></li>
                 </ul>
                 <div class="icons">
-                    <i class="fa fa-github fa-2x"></i>
-                    <i class="fa fa-linkedin fa-2x"></i>
-                    <i class="fa fa-twitter fa-2x"></i>
+                    <a href="https://github.com/eferrer28"><i class="fa fa-github fa-2x"></i></a>
+                    <a href="https://www.linkedin.com/in/eric-ferrer-ab953630"><i class="fa fa-linkedin fa-2x"></i></a>
+                    <a href="https://twitter.com/eferrer222"><i class="fa fa-twitter fa-2x"></i></a>
 
                 </div>
         </div>
