--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -8,10 +8,9 @@
         <a href="#">
 
             <div class="overlay">
-                <h3>hehehe</h3>
-                <p class="projcontent">
+                <span class="projcontent">
                     This was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.
-            </p>
+            </span>
 
             </div>
         </a>
