--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,8 +1,10 @@
 <!doctype html>
-<html>
+<htm lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+       <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
