--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,7 +183,7 @@ li a {
     font-size: 20px;
 }
 
-/* End Style for Project Images */
+/* End Style for Project Images 
 
 @media (max-width:767px) {
     #wrapper {
@@ -205,6 +205,7 @@ li a {
 .highlight {
     color: #FFF;
 }
+*/
 p,
 ol,
 ul,
