--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href='https://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css'>
 
@@ -17,7 +16,7 @@
 
     <div id="wrapper">
 
-        <div id="sidebar-wrapper">
+        <div id="sidebar-wrapper" class="mobile-nav">
             <div class="headshot">
                 <a href="/about"><img src="headshot.jpg" alt="dom" style="width:100px;height:100px;"></a>
             </div>
@@ -36,6 +35,9 @@
                     <a href="https://twitter.com/eferrer222"><i class="fa fa-twitter fa-2x"></i></a>
 
                 </div>
+                
+                
+                
         </div>
 
         <div id="page-content-wrapper">
@@ -49,6 +51,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
     <script src="js/bootstrap.min.js"></script>
+    <scipt src="js/another.js"></scipt>
+        
+        
 
 </body>
 
