--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 <body>
 
 
-    <div id="wrapper">
+    <div id="wrapper" class="main-container">
 
         <div id="sidebar-wrapper" class="mobile-nav">
             <div class="headshot">
