--- a/public/css/backup.css
+++ b/public/css/backup.css
@@ -1,18 +1,11 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
+#wrapper {
+    padding-left: 250px;
+    transition: all 0.4s ease 0s;
 }
-
-
 #sidebar-wrapper {
-    margin-left: -225px;
-    left: 225px;
-    width: 225px;
+    margin-left: -250px;
+    left: 250px;
+    width: 250px;
     background: #000;
     position: fixed;
     height: 100%;
@@ -20,7 +13,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     z-index: 1000;
     transition: all 0.4s ease 0s;
     background-color: #74AFAD;
-    padding-top: 25px; 
+    padding-top: 25px;
     display: none;
 }
 @media (min-width: 768px) {
@@ -54,7 +47,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 @media (min-width: 768px) {
   /* line 18, ../sass/_layout.scss */
   .main-container {
-    margin-left: 220px;
+    margin-left: 194px;
     padding: 1.5em;
   }
 }
@@ -80,7 +73,23 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     display: none;
   }
 }
-
+/*
+#page-content-wrapper {
+    margin-left: 100px;
+    margin-right: 100px;
+    padding-top: 25px;
+}
+#page-content-wrapper p {
+    font-size: 16px;
+    font-family: "Proxima Nova Regular", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    margin-top: 20px;
+}
+*/
+/*
+.container {
+    width: 80%;
+}
+*/
 .sidebar-nav {
     top: 0;
     width: 200px;
@@ -142,7 +151,8 @@ li a {
     overflow: hidden;
     display: inline-block;
     background-position: center;
-    background-repeat: no-repeat;   
+    background-repeat: no-repeat;
+    
         
 }
 
@@ -155,8 +165,11 @@ li a {
     display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
-         
+    
+
+        
 }
+
 
 #project3 {
     width: 420px;
@@ -167,7 +180,9 @@ li a {
     display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
-         
+    
+
+        
 }
 
 #project4 {
@@ -179,6 +194,8 @@ li a {
     display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
+    
+
         
 }
 
@@ -191,7 +208,9 @@ li a {
     display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
-       
+    
+
+        
 }
 
 .overlay {
@@ -218,7 +237,11 @@ li a {
     font-size: 20px;
 }
 
-   
+
+
+
+
+    
 .highlight {
     color: #FFF;
 }
