--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,15 +1,23 @@
-<header class="headduh">Welcome to My Site!</header>
+<article>
 
-    
-<p>My name is Eric and this is my place on the web -- my portfolio, my resume, and the place where I will ramble about nonsense that hopefully others care about. It is made using a very fun stack, powered by Node.js. You can find out more by checking out the git repo.
-</p>
+    <header class="headduh">Welcome to My Site!</header>
 
-<h3>Currently Working On...</h3>
-<ul>
-    <li>Completing my bachelors Degree! Currently Taking Assembly and Databases</li>
-    <li>Adding content to this site!</li>
-    <li>Touching Up Past Projects with CSS</li>
-    
-    
 
-</ul>
+    <p>My name is Eric and this is my place on the web -- my portfolio, my resume, and the place where I will ramble about nonsense that hopefully others care about. It is made using a very fun stack, powered by Node.js. You can find out more by checking out the git repo.
+    </p>
+    <br>
+
+    <h2>Currently Working On...</h2>
+    <br>
+
+
+    <ul class="workingon">
+        <li>Completing my bachelors Degree! Currently Taking Assembly and Databases</li>
+        <li>Adding content to this site!</li>
+        <li>Touching Up Past Projects with CSS</li>
+
+
+
+    </ul>
+
+</article>
