--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -4,7 +4,7 @@
 
     These are some of the OSU projects I have done so far along with a few coding samples from PDX Code Guild. CThe plan will eventually be to build on these some more. Mainly just adding some more styling into them to practice my CSS skills. {{!--SPLIT UP PROJECTS PER DIV --}}
     <div id="project1" class="box">
-        <a href="#">
+        <a href="/dom">
             <div class="overlay">
                 <span class="projcontent">
                     This was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.
@@ -13,54 +13,63 @@
         </a>
     </div>
     <div id="project2" class="box">
-        <a href="#">
+        <a href="/weather">
             <div class="overlay">
                 <span class="projcontent">his was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.</span>
             </div>
         </a>
     </div>
     <div id="project3" class="box">
-        <a href="#">
+        <a href="/howto">
             <div class="overlay">
                 <span class="projcontent">This will be about the HOW TO Guide</span>
             </div>
         </a>
     </div>
     <div id="project4" class="box">
-        <a href="#">
+        <a href="exercise">
             <div class="overlay">
                 <span class="projcontent">This will be about the HOW TO Guide Hdfgfdg df dfgd f</span>
             </div>
         </a>
     </div>
 
-    {{!-----------------CODE GUILD SAMPLES ----------------------}}  
-    <h3>PDX Code Guild Coding Samples</h3>  
-        <div id="project5" class="box">
+    {{!-----------------CODE GUILD SAMPLES ----------------------}}
+    <h3>PDX Code Guild Coding Samples</h3>
+    <div id="project5" class="box">
         <a href="#">
+            <div class="overlay">
+                <span class="projcontent">Phone Book </span>
+            </div>
+        </a>
+    </div>
+
+
+    <div id="project6" class="box">
+        <a href="">
+            <div class="overlay">
+                <span class="projcontent">Dungeon Crawler </span>
+            </div>
+        </a>
+    </div>
+    
+        <div id="project7" class="box">
+        <a href="/calculator">
             <div class="overlay">
                 <span class="projcontent">Calculator - DOOT DOOT DOOT </span>
             </div>
         </a>
-    </div>   
+    </div>
+    
+        <div id="project8" class="box">
+        <a href="">
+            <div class="overlay">
+                <span class="projcontent">Nope</span>
+            </div>
+        </a>
+    </div>
     {{!--------------------END OF SPLIT ------------------------}}
 
-    <span class="project">
-        <a class="dom" href="/dom">
-            
-            <img src="DOM_tree.png" alt="dom" style="width:420px;height:228px;">
-            <div class="thedom">
-                
-        </div>
-        </a>
-        
-    </span>
-
-
-
-    <span class="project">
-        <a class="weather" href="https://github.com/eferrer28/CS-290/blob/master/Week5/script.js"><img src="cloud.svg" alt="cloud" style="width:420px;height:228px;"></a>
-    </span>
 
 
 
