--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div id="project3" class="box">
-        <a href="http://www.howto.ericferrer.me/">
+        <a href="howto.ericferrer.me/">
             <div class="overlay">
                 <span class="projcontent">This will be about the HOW TO Guide</span>
             </div>
