--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -7,7 +7,7 @@
         <a href="/dom">
             <div class="overlay">
                 <span class="projcontent">
-                    This was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.
+                    HW assignment that utilized the Open Weather Map API. Lets a user input a zipcode and the city, temperature, and humidity are returned back. The second part of the assignment was to have a form that submits asynronously via a Post to http://httpbin.org/post
             </span>
             </div>
         </a>
@@ -62,7 +62,7 @@
     </div>
     
         <div id="project8" class="box">
-        <a href="">
+        <a href="http://www.http://eferrer23.pythonanywhere.com/bucketlist/">
             <div class="overlay">
                 <span class="projcontent">Nope</span>
             </div>
