--- a/views/weather.handlebars
+++ b/views/weather.handlebars
@@ -1,1 +1,30 @@
- <img src="construction.png"  > 
+<link href="css/weatherstyle.css" rel="stylesheet">
+
+    <div class="container">
+        <div class="span12">
+            <div id="weather">
+                <div>
+                    <h2>Weather </h2>
+                    <span></span><span id="temperature"></span>
+                </div>
+                <ul>
+                    <li><span>City:</span><span id="city"></span></li>
+                    <!--<li><span>Temp:</span><span id="temperature"></span></li> -->
+                    <li><span>Humidity:</span><span id="humidity"></span></li>
+                </ul>
+            </div>
+            <form class="center-block">
+                <input type="text" name="zipcode" id="zip" placeholder="City or Zip">
+                <input type="submit" id="zipsubmit" value="submit">
+            </form>
+        </div>
+        <div id="post">
+            <h2>Result For Post</h2>
+            <span></span><span id="httpbin"></span>
+        </div>
+        <form>
+            <input type="text" name="post1" id="post1" placeholder="Enter some text">
+            <input type="submit" id="postsubmit" value="submit">
+        </form>
+    </div>
+    <script src="/js/scriptweather.js"></script>
