--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -7,7 +7,7 @@
         <a href="/dom">
             <div class="overlay">
                 <span class="projcontent">
-                    HW assignment that utilized the Open Weather Map API. Lets a user input a zipcode and the city, temperature, and humidity are returned back. The second part of the assignment was to have a form that submits asynronously via a Post to http://httpbin.org/post
+                    This was one of the first assignments in my Web Development class which had us manipulating the DOM. 
             </span>
             </div>
         </a>
@@ -15,7 +15,7 @@
     <div id="project2" class="box">
         <a href="/weather">
             <div class="overlay">
-                <span class="projcontent">his was one of the first assignments I did during my web development course at OSU which had us manipulating the DOM.</span>
+                <span class="projcontent">        HW assignment that utilized the Open Weather Map API. Lets a user input a zipcode and the city, temperature, and humidity are returned back. The second part of the assignment was to have a form that submits asynronously via a Post to http://httpbin.org/post</span>
             </div>
         </a>
     </div>
@@ -62,7 +62,7 @@
     </div>
     
         <div id="project8" class="box">
-        <a href="http://www.http://eferrer23.pythonanywhere.com/bucketlist/">
+        <a href="eferrer23.pythonanywhere.com/bucketlist/">
             <div class="overlay">
                 <span class="projcontent">Nope</span>
             </div>
