--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -20,7 +20,7 @@
         </a>
     </div>
     <div id="project3" class="box">
-        <a href="howto.ericferrer.me/">
+        <a href="http://howto.ericferrer.me/">
             <div class="overlay">
                 <span class="projcontent">This will be about the HOW TO Guide</span>
             </div>
@@ -62,7 +62,7 @@
     </div>
     
         <div id="project8" class="box">
-        <a href="eferrer23.pythonanywhere.com/bucketlist/">
+        <a href="http://eferrer23.pythonanywhere.com/bucketlist/">
             <div class="overlay">
                 <span class="projcontent">Nope</span>
             </div>
