--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,9 +271,11 @@ li a {
 /* Styling for Calculator Images */
 
 .output {
-    width:500px;
+    padding-left: 50px;
     margin-top: 15px;
+    margin-left: 100px;
     padding-top: 25px;
+    
 }
 
 top {
@@ -287,6 +289,7 @@ top {
     
     padding-top: 50px;
     padding-left: 20px;
+    padding-right: 20px;
       
 }
 
@@ -318,10 +321,14 @@ top {
 input:not([type=text]) {
     
     background-color: gainsboro;
-    width: 80px;
+    width: 60px;
 }
 
 .yabba {
-    background-color: blue;
-    width: 500px;
+    background-color: #0099FF;
+      
+}
+
+ input {
+    text-align:right;
 }
